--- a/contact/index.html
+++ b/contact/index.html
@@ -35,23 +35,22 @@ title: Contact
       <ul class="fs-5 list-unstyled">
         <li class="mb-2">
           For questions about <strong>Local logistics</strong> including visa
-          application: Guojun Tang &lt;<a href="mailto:guojun.tang@ucalgary.ca">guojun.tang@ucalgary.ca</a
-          >&gt;
-         or Abbas Mahbod &lt;<a
-            href="mailto:abbas.mahbod1@ucalgary.ca"
+          application: Guojun Tang &lt;<a href="mailto:guojun.tang@ucalgary.ca"
+            >guojun.tang@ucalgary.ca</a
+          >&gt; or Abbas Mahbod &lt;<a href="mailto:abbas.mahbod1@ucalgary.ca"
             >abbas.mahbod1@ucalgary.ca</a
           >&gt;
         </li>
         <li class="mb-2">
           For questions about <strong>Web pages</strong>: Raymond Morland &lt;<a
             href="mailto:rmorland@athabascau.ca"
-            >rmorland@athabascau.ca</a
+            >rmorland1@learn.athabascau.ca</a
           >&gt;
         </li>
         <li class="mb-2">
           For questions about <strong>Paper EDAS submissions</strong>: Program
-          Chair(s) of each conference or workshop. (see the web page of each conference or workshop for their email addresses)
-          
+          Chair(s) of each conference or workshop. (see the web page of each
+          conference or workshop for their email addresses)
         </li>
         <li class="mb-2">
           For questions about <strong>Registrations</strong>: Dr. Steve Drew
@@ -89,13 +88,9 @@ title: Contact
         </li>
 
         <li class="mb-2">
-          For general questions about <strong>The event </strong>: Prof. Henry Leung
-          &lt;<a href="mailto:leungh@calgary.ca"
-            >leungh@calgary.ca</a
-          >&gt;
+          For general questions about <strong>The event </strong>: Prof. Henry
+          Leung &lt;<a href="mailto:leungh@calgary.ca">leungh@calgary.ca</a>&gt;
         </li>
-
-        
       </ul>
     </div>
   </div>
