--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@ sponsors:
     </h2>
     <div class="row mb-5 g-3">
       <div
-        class="col-sm-6 d-flex flex-column gap-3 justify-content-around py-2 text-center text-sm-start"
+        class="col-sm-6 d-flex flex-column gap-3 justify-content-center py-2 text-center text-sm-start"
       >
         <h3 class="">Calgary Telus Convention Center</h3>
         <p class="fs-5">
@@ -839,7 +839,7 @@ sponsors:
           a range of accommodation choices within walking distance.
         </p>
         <div
-          class="d-flex flex-row justify-content-center justify-content-sm-start"
+          class="d-flex flex-sm-row gap-2 flex-column justify-content-center justify-content-sm-start"
         >
           <a href="/venue/telus-convention-center" class="btn btn-primary"
             >Learn More</a
@@ -872,7 +872,7 @@ sponsors:
         />
       </div>
       <div
-        class="order-1 order-sm-2 col-sm-6 d-flex flex-column gap-2 flex-sm-column justify-content-around text-center text-sm-start"
+        class="order-1 order-sm-2 col-sm-6 d-flex flex-column gap-3 flex-sm-column justify-content-center text-center text-sm-start"
       >
         <h3 class="">Explore Stunning Calgary and Its Scenic Surroundings</h3>
         <p class="fs-5">
