--- a/index.html
+++ b/index.html
@@ -823,11 +823,11 @@ sponsors:
 </section>
 
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
-  <div class="page-section w-100 px-3 py-5">
-    <h2 class="fs-2 text-center mb-5">
-      Join us and Connect at a World Class Venue
-    </h2>
-    <div class="row mb-5 g-3">
+  <div
+    class="page-section w-100 px-3 py-5 d-flex flex-column justify-content-start gap-5"
+  >
+    <h2 class="fs-2 text-center">Join us and Connect at a World Class Venue</h2>
+    <div class="row g-3">
       <div
         class="col-sm-6 d-flex flex-column gap-3 justify-content-center py-2 text-center text-sm-start"
       >
@@ -856,11 +856,6 @@ sponsors:
         />
       </div>
     </div>
-  </div>
-</section>
-
-<section class="container-fluid d-flex flex-column gap-4 bg-light">
-  <div class="page-section w-100 px-3 py-5">
     <div class="row g-3">
       <div
         class="order-sm-1 order-2 col-sm-6 py-2 d-flex justify-content-center align-items-end"
